--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
     "module-alias": "^2.2.3",
     "nestjs-zod": "^5.0.1",
     "passport": "^0.7.0",
@@ -41,6 +42,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "uuid": "^13.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.5",
     "zod-validation-error": "^4.0.1"
   },
